# Bomberman-server

./: CMakeLists.txt  README.md
src/: main.c
src/game/: blocks.c  blocks.h  bomb.c  bomb.h  player.c  player.h
src/receiver/: receiver.c  receiver.h
src/sender/: broadcaster.c  broadcaster.h
src/structures/: list.c  list.h
